scripts/nullaway/wpi/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8.txt
../wpi/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/GeneticMatchResult.java:13: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.antibody = antibody;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/BaldwinFitnessFunction.java:122: error: [NullAway] dereferenced expression antibodies is @Nullable
        for (int i = 0; i < antibodies.length; i++) {
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/BaldwinFitnessFunction.java:149: error: [NullAway] dereferenced expression bestSegment is @Nullable
            antibody[offset + i] = bestSegment[i];
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java:199: error: [NullAway] dereferenced expression currentCounter is @Nullable
            fitnessValues[i] = currentCounter.getFitnessValue();
                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/AntigenFitnessData.java:29: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.bestAntibody = bestAntibody;
                          ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
5 errors
